# parsers_dota

./: .env  Taskfile.yaml  docker-compose.yaml  pyproject.toml
config/: config.py
dota_api/: api.py  stratz_api.py
protos/proto/: DotaPlayersInfo.proto
shems/: Profile.py
