[tool.poetry]
name = "parse-dota"
version = "0.1.0"
description = ""
authors = ["Mihail Pugachev <xd393727@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv"], version = "^4.6.1"}
fastapi = "^0.109.0"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
